2011-12-16  Richard Henderson  <rth@redhat.com>

	PR bootstrap/51072
	* config-lang.in (target_libs): Include target-libitm.

2011-12-16  Jason Merrill  <jason@redhat.com>

	PR c++/51461
	* decl.c (check_static_variable_definition): Check COMPLETE_TYPE_P
	before literal_type_p.

	PR c++/51331
	* class.c (convert_to_base_statically): Just call
	build_simple_base_path.
	(build_simple_base_path): Check field offset.

2011-12-15  Jason Merrill  <jason@redhat.com>

	PR c++/51458
	* decl.c (has_designator_problem): New.
	(reshape_init_r): Check for improper use of
	designated initializers.

2011-12-15  Jakub Jelinek  <jakub@redhat.com>

	PR c++/51463
	* decl.c (grokdeclarator): Set DECL_INITIAL of decl
	to error_mark_node to disallow NSDMI if declspecs->storage_class
	is sc_static.
	* parser.c (cp_parser_late_parse_one_default_arg): Return early
	if default_arg is error_mark_node.

	PR c/51360
	* semantics.c (finish_omp_clauses): For OMP_CLAUSE_NUM_THREADS_EXPR
	and OMP_CLAUSE_SCHEDULE_CHUNK_EXPR call mark_rvalue_use.

2011-12-15  Dodji Seketeli  <dodji@redhat.com>

	PR c++/51473
	* decl.c (check_tag_decl): Error out on auto specifier with no
	declarator.

2011-12-15  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/51365
	* cp-tree.h (CPTK_IS_FINAL): Add.
	* parser.c (cp_parser_translation_unit): Handle RID_IS_FINAL.
	(cp_parser_primary_expression, cp_parser_trait_expr): Likewise.
	* semantics.c (trait_expr_value, finish_trait_expr): Handle
	CPTK_IS_FINAL.
	* cxx-pretty-print.c (pp_cxx_trait_expression): Likewise.

2011-12-14  Jason Merrill  <jason@redhat.com>

	PR c++/51554
	* semantics.c (cxx_eval_indirect_ref): Fix sanity check.

	PR c++/51248
	* decl.c (copy_type_enum): Also update variants.
	(finish_enum): Allow variants of complete enums.

2011-12-14  Dodji Seketeli  <dodji@redhat.com>

	PR c++/51475
	* call.c (struct conversion)<u.next>: Update comment.
	(next_conversion): New static function.
	(convert_like_real): Use it.

	PR c++/51476